Agregado botón Save y ajuste para guardar cambios en Google Sheets

--- a/templates/details.html
+++ b/templates/details.html
@@ -136,14 +136,15 @@
 
     <script>
         const itemHours = {
-            "Quick dry prime blue active polo": 3,
+            "Long sleeve blue active polo": 3,
             "Amazon Hat": 2,
             "Rain jacket": 4,
             "Short Sleeve Polo": 3,
             "Amazon Vest": 2,
-            "Amazon Pants": 3,
+            "Pants": 3,
             "Amazon short pants": 3,
-            "Lightweight Ha": 2
+            "Lightweight Cap": 2,
+            "Lightweight Bucket": 2
         };
 
         function calculateTotalHours() {
